# openai-wrapper

./: LICENSE  README.md  design.md  pyproject.toml
src/: ai4privacy.py
