[tool.poetry]
name = "ai4privacy_openai_wrapper"
version = "0.0.1"
description = "Protect your privacy while using Openai"
authors = ["Michael Mazourik <michael@aisuisse.com>","Konstantinos Samaras-Tsakiris <ksamtsak@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.23"
matplotlib = "^3.7"
pandas = "^2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
mypy = "^1.3"
pylint = "^2.15"
black = "^23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.format]
max-line-length = 100

